Speech to text hozzáadása nem működik

--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -73,6 +73,27 @@
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="Speech_To_Text_Button">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>260</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Speech to text</string>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
